<resources>
    <string name="app_name">GiveBox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="error_description">Error description</string>
    <string name="close">Close</string>
    <string name="create_account">Create Account</string>
    <string name="let_s_create_account_together">Let\'s Create Account Together</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="hello_please_enter_your_details_to_continue">Hello! Please Enter Your Details To \nContinue.</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_your_phone">Verify Your Phone</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="get_password">Get Password</string>
    <string name="add_a_photo">Add A Photo</string>
    <string name="add_your_profile_photo">Add Your Profile Photo</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="add_product">Add Product</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="welcome_username">Welcome,\n<b><font fgcolor='#000000'>Username</font></b></string>
    <string name="search_furniture">Search Furniture</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="username">Username</string>
    <string name="give_or_exchange">Giveaway Or Exchange</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet,consectetur adipiscing elit</string>
    <string name="message">Message</string>
    <string name="my_ads">My Ads</string>
    <string name="post_ad">Post Ad</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="select_category">Select Category</string>
    <string name="select_age">Select Age</string>
    <string name="submit">Submit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="user_not_found">User not found</string>
    <string name="user_exist">User already exist</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="file_uri_is_null">File uri is malformed</string>
    <string name="chat_with_seller">Chat With Seller</string>
    <string name="description">Description</string>
    <string name="product_description">Product description</string>
    <string name="filter">Filter</string>
    <string name="categories">Categories</string>
    <string name="select">Select</string>
    <string name="select_product_type">Select product type</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="cannot_start_chat">Cannot start chat with this user</string>
    <string name="type_your_message">Type your message…</string>
    <string name="forgot_pass_user_not_found_err">User with this phone number not found on our record!</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_email">Edit Email</string>
    <string name="save">Save</string>
</resources>